# ModelGuard

./: .env.example  .gitignore  CLAUDE.md  Metrics_Specification.md  Oncall_Runbook.md  README.md  Security_Test_Documentation.md  Technical_Design.md  Threat_Model.md  demo.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/commands/: pr.md
.github/workflows/: cd.yml  ci.yml
api/: README.md  main.py  requirements.txt  seed_history.py  test_threats.py
api/tests/: test_functional.py  test_security.py
dashboard/: README.md  app.py
docs/: CICD_Gaps.md  Customer_Disruption_Risks.md  Failed_Security_Tests_Runbook.md  High_Traffic_Runbook.md  Improvements_AI.md  Metrics_Specification.md  OE_Dashboard_Runbook.md  Oncall_Runbook.md  Operational_State_Questions.md  Redesign.md  Security_Tests.md  Technical_Design.md  Testing_and_Monitoring_Gaps.md  Threat_Model.md  Unknown_Unknowns.md
frontend/: index.html  nginx.conf
oe-dashboard/: app.py  requirements.txt
ppt/: ModelGuard_Security_ppt1.pptx  pitch.md  presentation.md
tests/: README.md  functional.test.ts  manual.test.ts  package.json  security.test.ts  testSequencer.js  unit.test.ts
tests/fixtures/: benign-batch.ts
